--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm(validateForm)">
     <nz-form-item>
       <nz-form-control>
-        <nz-input-group nzPrefixIcon="anticon anticon-user">
+        <nz-input-group [nzPrefix]="prefixUser">
           <input type="text" nz-input formControlName="Username" placeholder="Username">
         </nz-input-group>
         <nz-form-explain *ngIf="validateForm.get('Username').dirty && validateForm.get('Username').errors">Please input
@@ -11,7 +11,7 @@
     </nz-form-item>
     <nz-form-item>
       <nz-form-control>
-        <nz-input-group nzPrefixIcon="anticon anticon-lock">
+        <nz-input-group [nzPrefix]="prefixLock">
           <input type="password" nz-input formControlName="Password" placeholder="Password">
         </nz-input-group>
         <nz-form-explain *ngIf="validateForm.get('Password').dirty && validateForm.get('Password').errors">Please input
@@ -33,3 +33,6 @@
     </nz-form-item>
   </form>
 </div>
+
+<ng-template #prefixUser><i nz-icon type="user"></i></ng-template>
+<ng-template #prefixLock><i nz-icon type="lock"></i></ng-template>
