--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,22 +1,20 @@
 <nz-layout class="wrapper">
   <nz-sider nzCollapsible [(nzCollapsed)]="vheader.isCollapsed" [nzTrigger]="triggerTemplate">
-    <app-sidebar></app-sidebar>
+    <div class="logo" routerLink="/home"></div>
+    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'inline'" [nzInlineCollapsed]="vheader.isCollapsed">
+      <app-sidebar></app-sidebar>
+    </ul>
   </nz-sider>
   <nz-layout>
     <app-header #vheader></app-header>
     <nz-content style="margin:0 16px;">
-      <nz-breadcrumb style="margin:16px 0;">
-        <nz-breadcrumb-item>User</nz-breadcrumb-item>
-        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
-      </nz-breadcrumb>
-      <div style="padding:24px; background: #fff;">
-        <app-preloader *ngIf="isPreloader | async"></app-preloader>
-        <router-outlet></router-outlet>
-      </div>
+      <app-breadcrumb></app-breadcrumb>
+      <app-preloader *ngIf="isPreloader | async"></app-preloader>
+      <router-outlet></router-outlet>
     </nz-content>
     <nz-footer style="text-align: center;">Ant Design ©2017 Implement By Angular</nz-footer>
   </nz-layout>
 </nz-layout>
 <ng-template #trigger>
-  <i class="anticon anticon-up"></i>
+  <i nz-icon type="up"></i>
 </ng-template>
