--- a/src/app/shared/preloader/preloader.component.html
+++ b/src/app/shared/preloader/preloader.component.html
@@ -1,4 +1,5 @@
-<ng-template #indicatorTemplate><i class="anticon anticon-spin anticon-loading" style="font-size: 24px;"></i>
+<ng-template #indicatorTemplate>
+  <i nz-icon [type]="'loading'" style="font-size: 24px;"></i>
 </ng-template>
 <nz-spin [nzIndicator]="indicatorTemplate" [nzDelay]="500">
 </nz-spin>
