--- a/src/app/pages/ledger/voucherentry/detail/detail.component.html
+++ b/src/app/pages/ledger/voucherentry/detail/detail.component.html
@@ -85,8 +85,8 @@
     <table>
       <tr>
         <td class="text-right pr1" style="color: rgba(0,0,0,.85);font-weight: 500;">Total Base Amt.</td>
-        <td width="14%" class="text-right pr1" id="base-debit">12,345.00</td>
-        <td width="14%" class="text-right pl1" id="base-credit">12,345.00</td>
+        <td width="14%" class="tr pr1" id="base-debit">12,345.00</td>
+        <td width="14%" class="tr pl1" id="base-credit">12,345.00</td>
         <td width="50px"></td>
       </tr>
     </table>
