--- a/src/app/shared/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/breadcrumb/breadcrumb.component.html
@@ -6,26 +6,32 @@
   </div>
   <div class="breadcrumb-items">
     <div *ngIf="newButton | async" class="breadcrumb-item">
-      <img src="../../../assets/visibleicons/add.svg" alt="New" (click)="clickNew()">
+      <img src="assets/visibleicons/add.svg" alt="New" (click)="clickNew()">
     </div>
     <div *ngIf="editButton | async" class="breadcrumb-item">
-      <img src="../../../assets/visibleicons/edit.svg" alt="Edit" (click)="clickEdit()">
+      <img src="assets/visibleicons/edit.svg" alt="Edit" (click)="clickEdit()">
     </div>
     <div *ngIf="deleteButton | async" class="breadcrumb-item">
-      <img src="../../../assets/visibleicons/delete.svg" alt="Delete" (click)="clickDelete()">
+      <img src="assets/visibleicons/delete.svg" alt="Delete" (click)="clickDelete()">
     </div>
     <div *ngIf="postButton | async" class="breadcrumb-item">
-      <img src="../../../assets/visibleicons/post.svg" alt="Post" (click)="clickPost()">
+      <img src="assets/visibleicons/post.svg" alt="Post" (click)="clickPost()">
     </div>
     <div *ngIf="importButton | async" class="breadcrumb-item">
-      <img src="../../../assets/visibleicons/import.svg" alt="Import" (click)="clickImport()">
+      <img src="assets/visibleicons/import.svg" alt="Import" (click)="clickImport()">
     </div>
     <div *ngIf="copyButton | async" class="breadcrumb-item">
-      <img src="../../../assets/visibleicons/duplicate.svg" alt="Copy" (click)="clickCopy()">
+      <img src="assets/visibleicons/duplicate.svg" alt="Copy" (click)="clickCopy()">
     </div>
     <div *ngIf="printButton | async" class="breadcrumb-item">
       <img [ngClass]="{'disabled-item' : !printButton}" src="../../../assets/visibleicons/print.svg" alt="Print"
         (click)="clickPrint()">
+    </div>
+    <div *ngIf="saveButton | async" class="breadcrumb-item">
+      <img src="assets/visibleicons/save.svg" alt="Save" (click)="clickSave()">
+    </div>
+    <div *ngIf="cancelButton | async" class="breadcrumb-item">
+      <img src="assets/visibleicons/cancel.svg" alt="Cancel" (click)="clickCancel()">
     </div>
     <div class="icon"></div>
   </div>
